Fixes bad margin for messages on small screens

--- a/style/less/responsive.less
+++ b/style/less/responsive.less
@@ -266,4 +266,8 @@
 		height: 34px;
 		cursor: pointer;
 	}
+
+	.message {
+		margin-right: @gutter * 1 / 3;
+	}
 }
